--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react": "^16.8.24",
+    "@types/react-dom": "^16.8.5",
     "lodash": "^4.17.15",
     "lodash.template": "^4.5.0",
     "react": "^16.8.6",
