--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.3.0",
     "@types/react": "^16.8.24",
     "@types/react-dom": "^16.8.5",
     "lodash": "^4.17.15",
